--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PH-assignment-01</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./assets/hero.png" type="image/x-icon">
 </head>
 <body>
-    
+
 </body>
 </html>
