--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="shortcut icon" href="./assets/hero.png" type="image/x-icon">
 </head>
 <body>
-
+    <nav>
+        <h1>Bangladesh 2.0</h1>
+        <button>Sign In</button>
+    </nav>
+    <header></header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
