--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <h1>Bangladesh 2.0</h1>
-        <button>Sign In</button>
+        <button class="sign-in-btn">Sign In</button>
     </nav>
     <header></header>
     <main></main>
