add header html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
         <h1>Bangladesh 2.0</h1>
         <button class="sign-in-btn">Sign In</button>
     </nav>
-    <header></header>
+    <header>
+        <p>Bangladesh 2.0</p>
+        <h1>Idea , innovation ,
+            vision and challenges in New Bangladesh.</h1>
+        <button>Explore New Bangladesh</button>
+    </header>
     <main></main>
     <footer></footer>
 </body>
