add header style

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
         <button class="sign-in-btn">Sign In</button>
     </nav>
     <header>
-        <p>Bangladesh 2.0</p>
-        <h1>Idea , innovation ,
-            vision and challenges in New Bangladesh.</h1>
-        <button>Explore New Bangladesh</button>
+        <div class="header-content">
+            <p>Bangladesh 2.0</p>
+            <h1>Idea , innovation ,<br>
+                vision and challenges in New Bangladesh.</h1>
+            <button class="header-btn">Explore New Bangladesh</button>
+         </div>
+        <img src="./assets/hero.png" alt="">
     </header>
     <main></main>
     <footer></footer>
