add pillar section html"

--- a/index.html
+++ b/index.html
@@ -1,27 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PH-assignment-01</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./assets/hero.png" type="image/x-icon">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./assets/hero.png" type="image/x-icon" />
+  </head>
+  <body>
     <nav>
-        <h1>Bangladesh 2.0</h1>
-        <button class="sign-in-btn">Sign In</button>
+      <h1>Bangladesh 2.0</h1>
+      <button class="sign-in-btn">Sign In</button>
     </nav>
     <header>
-        <div class="header-content">
-            <p>Bangladesh 2.0</p>
-            <h1>Idea , innovation ,<br>
-                vision and challenges in New Bangladesh.</h1>
-            <button class="header-btn">Explore New Bangladesh</button>
-         </div>
-        <img src="./assets/hero.png" alt="">
+      <div class="header-content">
+        <p>Bangladesh 2.0</p>
+        <h1>
+          Idea , innovation ,<br />
+          vision and challenges in New Bangladesh.
+        </h1>
+        <button class="header-btn">Explore New Bangladesh</button>
+      </div>
+      <img src="./assets/hero.png" alt="" />
     </header>
-    <main></main>
+    <main>
+      <section class="pillar">
+        <h1>Pillars of "Bangladesh 2.0"</h1>
+        <div class="pillar-card-container">
+          <div class="pillar-card">
+            <img src="./assets/card-icon.png" alt="card-icon" />
+            <h2>Innovation</h2>
+            <p>
+              Driving progress through creativity and cutting-edge solutions to
+              tackle global and local challenges
+            </p>
+          </div>
+          <div class="pillar-card">
+            <img src="./assets/card-icon.png" alt="card-icon" />
+            <h2>Sustainability</h2>
+            <p>
+              Building a greener future by promoting eco-friendly practices and
+              ensuring environmental conservation
+            </p>
+          </div>
+          <div class="pillar-card">
+            <img src="./assets/card-icon.png" alt="card-icon" />
+            <h2>Infrastructure</h2>
+            <p>
+              Strengthening the foundation for economic growth with modern and
+              resilient structures
+            </p>
+          </div>
+          <div class="pillar-card">
+            <img src="./assets/card-icon.png" alt="card-icon" />
+            <h2>Empowerment</h2>
+            <p>
+              Enabling individuals and communities with opportunities,
+              education, and resources to thrive
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
-</body>
+  </body>
 </html>
