--- a/index.html
+++ b/index.html
@@ -61,6 +61,45 @@
           </div>
         </div>
       </section>
+      <section class="vision">
+        <h1>The Vision of Future</h1>
+        <p>
+          Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+          cutting-edge technology, promoting inclusive growth, and ensuring
+          sustainability. With initiatives in renewable energy, digital
+          transformation, and robust infrastructure, the country is set to
+          become a global model of development.
+        </p>
+        <div class="vision-card-container">
+          <div class="vision-card">
+            <img src="./assets/card-icon.png" alt="card-icon" />
+            <h2>Digital Transformation</h2>
+            <p>
+              Creating a nationwide digital ecosystem to enhance connectivity
+              and access to services for all citizens.
+            </p>
+            <button>Learn More</button>
+          </div>
+          <div class="vision-card">
+            <img src="./assets/card-icon.png" alt="card-icon" />
+            <h2>Green Energy</h2>
+            <p>
+              Investments in solar and wind energy to ensure a sustainable and
+              eco-friendly future.
+            </p>
+            <button>Learn More</button>
+          </div>
+          <div class="vision-card">
+            <img src="./assets/card-icon.png" alt="card-icon" />
+            <h2>Modern Infrastructure</h2>
+            <p>
+              Building state-of-the-art infrastructure to support economic
+              growth and global competitiveness.
+            </p>
+            <button>Learn More</button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
