--- a/index.html
+++ b/index.html
@@ -71,32 +71,32 @@
           become a global model of development.
         </p>
         <div class="vision-card-container">
-          <div class="vision-card">
+          <div class="vision-card" id="vision-card-1">
             <img src="./assets/card-icon.png" alt="card-icon" />
             <h2>Digital Transformation</h2>
             <p>
               Creating a nationwide digital ecosystem to enhance connectivity
               and access to services for all citizens.
             </p>
-            <button>Learn More</button>
+            <button class="learn-more-btn" id="learn-more-btn-1">Learn More</button>
           </div>
-          <div class="vision-card">
+          <div class="vision-card" id="vision-card-2">
             <img src="./assets/card-icon.png" alt="card-icon" />
             <h2>Green Energy</h2>
             <p>
               Investments in solar and wind energy to ensure a sustainable and
               eco-friendly future.
             </p>
-            <button>Learn More</button>
+            <button class="learn-more-btn" id="learn-more-btn-2">Learn More</button>
           </div>
-          <div class="vision-card">
+          <div class="vision-card" id="vision-card-3">
             <img src="./assets/card-icon.png" alt="card-icon" />
             <h2>Modern Infrastructure</h2>
             <p>
               Building state-of-the-art infrastructure to support economic
               growth and global competitiveness.
             </p>
-            <button>Learn More</button>
+            <button class="learn-more-btn" id="learn-more-btn-3">Learn More</button>
           </div>
         </div>
       </section>
