add quote section html

--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
           </div>
         </div>
       </section>
+      <section class="quote">
+          <p class="quote-text">
+            "Peace and prosperity come when people take control of their own destiny, breaking free from poverty through opportunity, innovation, and collective action. The power of one idea can transform countless lives, and change the world for the better."
+          </p>
+        <div class="narrator">
+          <h2>Dr. Muhammad Yunus</h2>
+          <p>Chief Adviser of the People's Republic of Bangladesh</p>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
