add donate section html

--- a/index.html
+++ b/index.html
@@ -198,6 +198,18 @@
           </div>
         </div>
       </section>
+      <section class="donate">
+        <h1>Donate Today</h1>
+        <p>"Join hands in building a brighter and more sustainable future. Your donation empowers us to create meaningful change, support essential initiatives, and uplift communities in need. Every contribution makes a difference—be the change today"</p>
+        <div class="taka">
+          <button class="tk-btn">100 Taka</button>
+          <button class="tk-btn">200 Taka</button>
+          <button class="tk-btn">500 Taka</button>
+          <button class="tk-btn">1000 Taka</button>
+        </div>
+        <input type="text">
+        <button class="done-now-btn">Done Now</button>
+      </section>
     </main>
     <footer></footer>
   </body>
