add subscribe section html

--- a/index.html
+++ b/index.html
@@ -201,16 +201,24 @@
       <section class="donate">
         <h1>Donate Today</h1>
         <p>"Join hands in building a brighter and more sustainable future. Your donation empowers us to create meaningful change, support essential initiatives, and uplift communities in need. Every contribution makes a difference—be the change today"</p>
-        <div class="taka">
+        <div class="taka-btn-container">
           <button class="tk-btn">100 Taka</button>
           <button class="tk-btn">200 Taka</button>
           <button class="tk-btn">500 Taka</button>
           <button class="tk-btn">1000 Taka</button>
         </div>
-        <input type="text">
+        <input type="text" placeholder="Other Amount (Taka)" class="tk-input">
         <button class="done-now-btn">Done Now</button>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="subscribe">
+        <h1>Subscribe Newsletter</h1>
+        <P>Get the latest news and updates on Bangladesh 2.0 delivered straight to your inbox. Subscribe to our newsletter for insights on technology, growth, and the future of Bangladesh.</P>
+        <input type="email" name="email" id="email" placeholder="Enter your email here">
+        <button class="subscribe-btn">Subscribe</button>
+        <p></p>
+      </section>
+    </footer>
   </body>
 </html>
