add footer section html

--- a/index.html
+++ b/index.html
@@ -257,6 +257,16 @@
         <p>We promise not to spam you!</p>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="footer-content">
+        <h1>Bangladesh 2.0</h1>
+        <hr>
+        <div class="logo">
+          <img src="./assets/facebook.png" alt="facebook-logo">
+          <img src="./assets/instagram.png" alt="imstagram-logo">
+          <img src="./assets/x.png" alt="twitter-logo">
+        </div>
+    </section>
+    </footer>
   </body>
 </html>
